--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "server":"127.0.0.1",
     "server_port":8388,
+    "local_address":"127.0.0.1",
     "local_port":1080,
     "password":"barfoo!",
     "timeout":600,
