--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "description": "a tunnel proxy that help you get through firewalls",
     "keywords": ["shadowsocks", "proxy", "socks5"],
     "author": "clowwindy",
-    "version": "1.4.2  By Jingyun.org",
+    "version": "1.5.0   By jingyun.org",
     "licenses": [{
         "type": "MIT",
         "url": "https://raw.github.com/clowwindy/shadowsocks-nodejs/master/LICENSE"
     }],
     "engines": {
-        "node": ">=0.8.0"
+        "node": ">=0.10.0"
     },
     "directories": {
         "lib": "./lib/shadowsocks"
